added covid chart

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,8 +1,10 @@
 <section
   class="hero img-fluid"
   #hero
-  style="background-image: url(assets/images/masthead/masthead-bg_1.jpg);"
 >
+<div style="background-image: url(assets/images/masthead/masthead-bg_1.jpg);" class="background img-fluid" parallax
+  [config]="{initialValue: -0, ratio: .1}">
+</div>
   <div class="container text-center">
     <nav aria-label="breadcrumb" class="d-flex justify-content-center">
       <ol class="breadcrumb">
@@ -52,12 +54,12 @@
               When our parent company was formed, the only goal was to fulfill every need our customers had regarding technology and
               logistics.
               </p>
-              <p class="mb-1 mt-0">We assembled teams to take on challenging projects, intergrating new technology, building wifi networks, and development
-              healcare communication technology.</p>
+              <p class="mb-1 mt-0">We assembled teams to take on challenging projects intergrating new technology, building wifi networks, and the development of
+              healthcare communication technology.</p>
               <p class="mb-1 mt-0">Partnering up with several other small business, we built a coalition that included a race-team, and all of their
               sponsors.</p>
-              <p class="mb-1 mt-0">As a certified <em>SDOSB</em>, we are fortunate to have access to federal funds, by way of government contracts. We are
-              part of a network of over <b>10,000+</b> service disabled owned small businesses, in a multitude of industries.</p>
+              <p class="mb-1 mt-0">As a certified <em class="text-bold">SDOSB</em>, we are fortunate to have access to federal funds, by way of government contracts. We are
+              part of a network of over <b class="text-secondary">10,000+</b> service disabled owned small businesses, in a multitude of industries.</p>
 
           </div>
           <div class="col-md-7">
@@ -78,7 +80,7 @@
               Meet all customer expectations, never missing an opportunity to surpass those expectations.
             </li>
             <li>
-              No matter what, include empathy and compassion in everything we do! . 
+              No matter what, include empathy and compassion in everything we do!
             </li>
           </ol>
         </div>
@@ -95,11 +97,11 @@
                   <h3>Kevin Szkolnik</h3>
                   <span class="position mb-2">CEO</span>
                   <div class="faded">
-                    <p>Currently lives in Florida with his wife, two dogs, and 2 cats.</p>
+                    <p>Currently lives in Florida. Has 15+ years experience in Sales, Account Management and Networking.</p>
                     <ul class="d-inline-flex staff-social text-center">
-                      <li class="mx-auto"><a href="#"><span class="fa fa-twitter"></span></a></li>
-                      <li class="mx-auto"><a href="#"><span class="fa fa-facebook"></span></a></li>
-                      <li class="mx-auto"><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                      <li class="mx-auto"><a href=""><span class="fa fa-twitter"></span></a></li>
+                      <li class="mx-auto"><a href="https://facebook.com/kevinszkolnik" target="_blank"><span class="fa fa-facebook"></span></a></li>
+                      <li class="mx-auto"><a href="https://www.linkedin.com/in/kevin-szkolnik-66222167/" target="_blank"><span class="fa fa-linkedin"></span></a></li>
                       <li class="mx-auto"><a href="#"><span class="fa fa-instagram"></span></a></li>
                     </ul>
                   </div>
@@ -115,11 +117,11 @@
                   <h3>Jimi Flynn</h3>
                   <span class="position mb-2">COO</span>
                   <div class="faded">
-                    <p>Currently lives in Ohio. Likes to play music and be outdoors.</p>
+                    <p>Currently lives in Ohio. Specializes in Marketing, Software Development and Project Management.</p>
                     <ul class="d-inline-flex staff-social text-center">
                       <li class="mx-auto"><a href="#"><span class="fa fa-twitter"></span></a></li>
                       <li class="mx-auto"><a href="#"><span class="fa fa-facebook"></span></a></li>
-                      <li class="mx-auto"><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                      <li class="mx-auto"><a href="https://www.linkedin.com/in/jimi-flynn/" target="_blank"><span class="fa fa-linkedin"></span></a></li>
                       <li class="mx-auto"><a href="#"><span class="fa fa-instagram"></span></a></li>
                     </ul>
                   </div>
@@ -135,7 +137,7 @@
                   <h3>Guy Morrison</h3>
                   <span class="position mb-2">Senior Representative</span>
                   <div class="faded">
-                    <p>Currently lives in Florida. Enjoys going to the beach.</p>
+                    <p>Currently lives in Florida. Experienced Logistics Coordinator, and Medical Supply Purchasing.</p>
                     <ul class="d-inline-flex staff-social text-center">
                       <li class="mx-auto"><a href="#"><span class="fa fa-twitter"></span></a></li>
                       <li class="mx-auto"><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -185,6 +187,7 @@
             </li>
             <li>Medical Technology Research & Development</li>
             <li>Patient & Provider Healthcare Solutions</li>
+            <li>Authorized Federal Contractor, SDOSB</li>
           </ul>
 
         </div>
