--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,31 +12,31 @@
       </p>
     </div>
     <ul class="list-group">
-      <li class="list-group-item" (click)="navbar.navigateTo('home')">
+      <li class="list-group-item" id="home-link" (click)="navbar.navigateTo('home')">
         <button class="btn btn-link nav-link">
           <i class="fa fa-home fa-2x"></i> Home
         </button>
       </li>
       <!-- Link-->
-      <li class="list-group-item" (click)="navbar.navigateTo('about')">
+      <li class="list-group-item" id="about-link" (click)="navbar.navigateTo('about')">
         <button class="icon btn btn-link nav-link">
           <i class="fa fa-handshake-o fa-2x"></i> About
         </button>
       </li>
       <!-- Link-->
-      <li class="list-group-item" (click)="navbar.navigateTo('contact')">
+      <li class="list-group-item" id="contact-link" (click)="navbar.navigateTo('contact')">
         <button class="btn btn-link nav-link">
           <i class="fa fa-envelope fa-2x"></i> Contact
         </button>
       </li>
       <!-- Link-->
-      <li class="list-group-item" (click)="navbar.navigateTo('faq')">
+      <li class="list-group-item" id="faq-link" (click)="navbar.navigateTo('faq')">
         <button class="btn btn-link nav-link">
           <i class="fa fa-info-circle fa-2x"></i> Faq
         </button>
       </li>
       <!-- Link-->
-      <li class="list-group-item" (click)="navbar.navigateTo('covid-updates')">
+      <li class="list-group-item" id="covid-link" (click)="navbar.navigateTo('covid')">
         <button class="btn btn-link nav-link">
           <i class="fa fa-medkit fa-2x"></i> COVID-19 Updates
         </button>
