--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,8 @@
-<section #hero class="hero"
-  style="background-image: url(assets/images/masthead/masthead-bg_1.jpg);">
+<section #hero class="hero img-fluid"
+  >
+  <div style="background-image: url(assets/images/masthead/masthead-bg_1.jpg);" class="background img-fluid" parallax
+    [config]="{initialValue: -0, ratio: .1}">
+  </div>
   <div class="container text-center">
     <!-- breadcrumb-->
     <nav aria-label="breadcrumb" class="d-flex justify-content-center">
