--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,7 +1,9 @@
 <!-- Hero Section-->
     <section class="hero"
-    #hero
-    style="background-image: url(assets/images/masthead/masthead-bg_1.jpg);">
+    #hero>
+    <div style="background-image: url(assets/images/masthead/masthead-bg_1.jpg);" class="background img-fluid" parallax
+      [config]="{initialValue: -0, ratio: .1}">
+    </div>
       <div class="container text-center">
         <!-- breadcrumb-->
         <nav aria-label="breadcrumb" class="d-flex justify-content-center">
@@ -13,7 +15,7 @@
         <div class="row align-items-center justify-content-center">
           <div class="col-lg-8 mb-5">
             <h2 class="text-uppercase text-center mb-5" data-aos="fade-up" data-aos-delay="1000">
-              Frequesntly Asked Questions
+              Frequently Asked Questions
             </h2>
             <hr class="bg-secondary">
             <div class="row">
