--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -351,7 +351,8 @@ button {
     height: 80vh;
     max-height: 650px !important;
     background-size: cover;
-    background-position: center;
+    // background-position-x: center;
+    background-position: bottom center;
     background-attachment: fixed;
 
 }
