added amin login and admin features

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -231,6 +231,12 @@ button {
 #page-content-wrapper {
     width: 100vw;
     overflow-x: hidden !important;
+    padding: 7rem 0;
+
+    @include media-breakpoint-down(sm) {
+        padding: 2rem 0;
+
+    }
 }
 
 @media (max-width: 990px) {
