--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,4 +15,6 @@
 @import 'divider';
 @import 'staff';
 @import 'global';
+@import 'login';
+@import 'admin';
 @import "~ngx-easy-table/style.scss";
