--- a/src/app/shared/brand-button/brand-button.component.html
+++ b/src/app/shared/brand-button/brand-button.component.html
@@ -1,13 +1,13 @@
 <div class="svg-container" id="logo-container" [ngClass]="showOnInit ? 'show-on-init' : ''">
   <div id="brand-button" style="cursor: pointer;" class="navbar-b" (click)="navigateTo('/')">
-    <!-- <img src="assets/images/logo.svg" width="35" style="" class="mx-auto" alt="" /> -->
+    <img src="assets/images/logo_full_new_short.png" width="165" style="" class="mx-auto" alt="" />
     <!-- <span
       class="text-uppercase pt-1"
       style="font-size: 16px; font-weight: 700;"
       *ngIf="logoHidden"
       >MTP</span
     > -->
-    <svg xmlns="http://www.w3.org/2000/svg" id="svg1593" version="1.1" viewBox="0 0 79.374999 26.458333"
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" id="svg1593" version="1.1" viewBox="0 0 79.374999 26.458333"
       [ngStyle]="{ width: width, height: height }">
       <defs id="defs1587" />
       <g id="layer4">
@@ -58,6 +58,6 @@
             id="path949" />
         </g>
       </g>
-    </svg>
+    </svg> -->
   </div>
 </div>
