--- a/src/app/admin/forms/forms.component.html
+++ b/src/app/admin/forms/forms.component.html
@@ -1,5 +1,16 @@
 <div class="container">
-  <p>forms works!</p>
+  <div class="d-flex justify-content-center row">
+    <div class="col-md-10">
+      <div class="row">
+        <!-- <div class="card border-dark" *ngFor="let form of forms">
+          <div class="card-body">
+            <h4 class="card-title">Title</h4>
+            <p class="card-text">Text</p>
+          </div>
+        </div> -->
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- TODO: Add Forms list from database docs -->
