--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   <div class="overlay container">
     <div class="row align-items-center justify-content-center">
       <div class="col-lg-8 mb-5">
-        <h2 class="text-uppercase text-center mb-5 animate" data-aos="fade-up" data-aos-delay="1000">
+        <h2 class="text-uppercase text-center mb-3 animate" data-aos="fade-up" data-aos-delay="1000">
           Supplying the Frontlines
         </h2>
         <hr class="bg-secondary">
@@ -51,11 +51,11 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <!-- <div class="row">
       <div class="downArrow bounce">
         <i class="text-muted fa fa-chevron-down fa-2x"></i>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
 <!-- end Hero -->
@@ -82,7 +82,7 @@
     </div>
   </div>
 </section> -->
-<section class="section mt-5">
+<section class="pt-2 pt-sm-5">
   <div class="container">
     <div class="row no-gutters">
       <div class="col-md-3 d-flex services align-self-stretch p-4 animated" data-aos="fade-up" data-aos-delay="100" data-aos-offset="170">
@@ -140,7 +140,7 @@
       <div class="col-md-6 animated" data-aos="fade-right">
         <img src="assets/images/doc-pat.jpg" alt="" class="img-fluid">
       </div>
-      <div class="col-md-6 text-center my-auto pt-sm-5 animated" data-aos="fade-left">
+      <div class="col-md-6 text-center my-3 pt-sm-5 animated" data-aos="fade-left">
         <h2>
           We Care About Healthcare Patients & Providers!
         </h2>
